ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-ghost'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
  - hosts:
    - pafable.com
    - www.pafable.com
    secretName: pafable-com
  rules:
  - host: pafable.com
    http:
      paths:
        - path: /
          backend:
            serviceName: ghost-pod-ip-service
            servicePort: 2368
  - host: www.pafable.com
    http:
      paths:
        - path: /
          backend:
            serviceName: ghost-pod-ip-service
            servicePort: 2368
